--- a/packages/dart_mappable/pubspec.yaml
+++ b/packages/dart_mappable/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.2.0
-  dart_mappable_builder: ^2.0.0
+  dart_mappable_builder:
+    path: '../dart_mappable_builder'
   lints: '>=1.0.0 <3.0.0'
   test: ^1.20.1
