--- a/packages/dart_mappable/pubspec.yaml
+++ b/packages/dart_mappable/pubspec.yaml
@@ -6,6 +6,7 @@ issue_tracker: https://github.com/schultek/dart_mappable/issues
 documentation: https://pub.dev/documentation/dart_mappable/latest/topics/Introduction-topic.html
 funding:
   - https://github.com/sponsors/schultek
+publish_to: none
 
 environment:
   sdk: '>=2.17.0 <3.0.0'
@@ -18,6 +19,9 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.2.0
   dart_mappable_builder:
-    path: '../dart_mappable_builder'
+    git:
+      url: https://github.com/devfelipereis/dart_mappable
+      ref: feat/custom-property
+      path: packages/dart_mappable_builder
   lints: '>=1.0.0 <3.0.0'
   test: ^1.20.1
