--- a/packages/dart_mappable_builder/pubspec.yaml
+++ b/packages/dart_mappable_builder/pubspec.yaml
@@ -8,7 +8,7 @@ funding:
 publish_to: none
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   analyzer: ^5.2.0
@@ -16,7 +16,10 @@ dependencies:
   build: ^2.0.0
   collection: ^1.15.0
   dart_mappable:
-    path: '../dart_mappable'
+    git:
+      url: https://github.com/devfelipereis/dart_mappable
+      ref: feat/custom-property
+      path: packages/dart_mappable
   dart_style: ^2.2.4
   glob: ^2.1.0
   path: ^1.8.0
@@ -25,5 +28,5 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.2.0
   build_test: ^2.1.5
-  lints: '>=1.0.0 <3.0.0'
+  lints: ">=1.0.0 <3.0.0"
   test: ^1.22.1
