--- a/packages/dart_mappable/pubspec.yaml
+++ b/packages/dart_mappable/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.2.0
-  dart_mappable_builder: ^4.2.2
+  dart_mappable_builder:
+    git:
+      url: https://github.com/devfelipereis/dart_mappable
+      path: packages/dart_mappable_builder
+      ref: main
   lints: '>=1.0.0 <3.0.0'
   test: ^1.20.1
