--- a/packages/dart_mappable_builder/pubspec.yaml
+++ b/packages/dart_mappable_builder/pubspec.yaml
@@ -5,6 +5,7 @@ repository: https://github.com/schultek/dart_mappable
 issue_tracker: https://github.com/schultek/dart_mappable/issues
 funding:
   - https://github.com/sponsors/schultek
+publish_to: none
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -14,7 +15,11 @@ dependencies:
   ansicolor: ^2.0.1
   build: ^2.0.0
   collection: ^1.15.0
-  dart_mappable: ^4.2.2
+  dart_mappable:
+    git:
+      url: https://github.com/devfelipereis/dart_mappable
+      path: packages/dart_mappable
+      ref: main
   dart_style: ^2.2.4
   glob: ^2.1.0
   path: ^1.8.0
