--- a/packages/dart_mappable/pubspec.yaml
+++ b/packages/dart_mappable/pubspec.yaml
@@ -27,6 +27,6 @@ dev_dependencies:
     git:
       url: https://github.com/devfelipereis/dart_mappable
       path: packages/dart_mappable_builder
-      ref: v3.0.3-dev.2
+      ref: main
   lints: '>=1.0.0 <3.0.0'
   test: ^1.20.1
