--- a/packages/dart_mappable_builder/pubspec.yaml
+++ b/packages/dart_mappable_builder/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
     git:
       url: https://github.com/devfelipereis/dart_mappable
       path: packages/dart_mappable
-      ref: v3.0.3-dev.2
+      ref: main
   dart_style: ^2.2.4
   glob: ^2.1.0
   path: ^1.8.0
